2010-11-16  Jie Zhang  <jie.zhang@analog.com>

	* Makefile.am (eelf32bfinfd.c, eelf32bfin.c): Depend on bfin.em.
	* Makefile.in: Regenerated.
	* emulparams/bfin.sh (EXTRA_EM_FILE): Set.
	* emulparams/elf32bfinfd.sh (EXTRA_EM_FILE): Likewise.
	* emultempl/bfin.em: New.

2010-11-16  Yasuaki Taniguchi  <taniguchi.yasua@jp.fujitsu.com>

	* emultempl/pe.em (_list_options): Correct typo.
	* emultempl/pep.em (_list_options): Likewise.

2010-11-08  Thomas Schwinge  <thomas@schwinge.name>

	* configure.host: Add stanza for *-*-gnu*.

2010-11-05  Pierre Muller  <muller@ics.u-strasbg.fr>

	* emultempl/spuelf.em (new_tmp_file): Fix wrong first parameter.

2010-11-05  Tristan Gingold  <gingold@adacore.com>

	* po/ld.pot: Regenerate
	* po/POTFILES.in: Regenerate

2010-11-05  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.21.

2010-11-05  Dave Korn  <dave.korn.cygwin@gmail.com>

	* plugin.h (plugin_active_plugins_p): New prototype.
	(is_ir_dummy_bfd): Delete prototype.
	* plugin.c: Fix formatting issues.
	(is_ir_dummy_bfd): Make static.
	(plugin_active_plugins_p): New function.
	* ldfile.c (ldfile_try_open_bfd): Use it to save work if no plugins
	are loaded.  Always close file descriptor after claim handler returns.
	* ldmain.c (add_archive_element): Likewise.

2010-11-05  Alan Modra  <amodra@gmail.com>

	* ldlang.c (lang_add_section): Distinguish ELF treatment of NOLOAD.
	(map_input_to_output_sections): Likewise.
	(lang_size_sections_1): Likewise.
	(IGNORE_SECTION): Don't test SEC_NEVER_LOAD.
	(lang_check_section_addresses): Likewise.

2010-11-04  Kai Tietz  <kai.tietz@onevision.com>

	* scripttempl/pe.sc (.debug_types): New.
	* scripttempl/pep.sc: Likewise.

2010-11-04  Alan Modra  <amodra@gmail.com>

	* plugin.c (is_ir_dummy_bfd): Don't segfault on NULL abfd.

2010-11-03  Nick Clifton  <nickc@redhat.com>

	PR ld/12001
	* ldlang.c (ldlang_def_chain_list): New variable.  Contains a list
	of symbols defined via the --defsym command line option and